@@ -39,6 +39,7 @@ WebKitBuildbot = function()
         "Apple-BigSur JSC": {platform: Dashboard.Platform.macOSBigSur, heading: "JavaScript", combinedQueues: {
             "Apple-BigSur-Debug-Test262-Tests": {heading: "Debug Test262 (Tests)"},
             "Apple-BigSur-Release-Test262-Tests": {heading: "Release Test262 (Tests)"},
+            "Apple-BigSur-AppleSilicon-Release-Test262-Tests": {heading: "Release arm64 Test262 (Tests)"},
             "Apple-BigSur-AppleSilicon-Debug-JSC-Tests": {heading: "Debug arm64 JSC (Tests)"},
             "Apple-BigSur-AppleSilicon-Release-JSC-Tests": {heading: "Release arm64 JSC (Tests)"},
         }},
