@@ -1,3 +1,14 @@
+2021-06-14  Ryan Haddad  <ryanhaddad@apple.com>
+
+        Bring up an Apple-BigSur-AppleSilicon-Release-Test262-Tests queue
+        https://bugs.webkit.org/show_bug.cgi?id=226602
+
+        Reviewed by Aakash Jain.
+
+        * CISupport/build-webkit-org/config.json:
+        * CISupport/build-webkit-org/public_html/dashboard/Scripts/WebKitBuildbot.js:
+        (WebKitBuildbot):
+
 2021-06-14  Kimmo Kinnunen  <kkinnunen@apple.com>
 
         AcceleratedImageBuffer not instantiated but objects are punned to the type
